Fixed the layout issue

--- a/website/main-pages/ballerina.io-website-theme/css/ballerina-io.css
+++ b/website/main-pages/ballerina.io-website-theme/css/ballerina-io.css
@@ -125,6 +125,7 @@
      margin-top: 30px;
      padding-bottom: 30px;
      background-color: #e7eaeb;
+     background-size: 250%;
 }
  .cBallerina-io-White-row {
      background-color: #ffffff;
