--- a/website/main-pages/ballerina.io-website-theme/css/philosophy-page.css
+++ b/website/main-pages/ballerina.io-website-theme/css/philosophy-page.css
@@ -371,7 +371,7 @@ transition: all 0.2s ease 0s
 
 .cPhil-green {
     
-      background-color: #3ad1ca;
+      background-color: #20b6af;
     
 }
 .cPhil-Gray {
